# workflows

./: .commitlintrc.json  .gitattributes  .gitignore  .graphqlrc.yml  .release-please-manifest.json  .workflow_metadata_ruleset.yaml  .workflows-lint.yaml  Cargo.toml  Dockerfile  README.md  action.yaml  action.yml  catalog-info.yaml  debug_template.yaml  example-mpi-workflows.yaml  html-report.html  kueue-setup.yaml  localqueue.yaml  mkdocs.yml  mpi-job.yaml  mpi-queue.yaml  mpi.yaml  offline-workflow.yaml  offline.yaml  online-workflow.yaml  out.yaml  query.graphql  rbac.yaml  release-please-config.json  rf.yaml  simple-job.yaml
backend/: .gitignore  Cargo.toml  Dockerfile.auth-broker  Dockerfile.auth-daemon  Dockerfile.auth-gateway  Dockerfile.graph-proxy  Dockerfile.oidc-bff  Dockerfile.sessionspaces  deny.toml
backend/argo-workflows-openapi/: Cargo.toml  build.rs
backend/auth-broker/: Cargo.toml  README.md
backend/auth-broker/src/: config.rs  health.rs  k8s.rs  main.rs  state.rs
backend/auth-broker/src/ext_authz/: authorize_request.rs  authz_error.rs  extract_service_account_token.rs  mod.rs  pod_identity.rs  resolve_subject.rs  tests.rs
backend/auth-common/: Cargo.toml
backend/auth-common/src/: config.rs  database.rs  error.rs  http_utils.rs  lib.rs  token.rs
backend/auth-common/src/entity/: mod.rs
backend/auth-core/: Cargo.toml  README.md
backend/auth-core/.devcontainer/: Dockerfile  devcontainer.json
backend/auth-core/migration/: Cargo.toml
backend/auth-core/migration/src/: m20220101_000001_create_table.rs
backend/auth-core/src/: config.rs  database.rs  lib.rs  oidc.rs  request.rs
backend/auth-core/src/entity/: mod.rs
backend/auth-daemon/: CHANGELOG.md  Cargo.toml  README.md
backend/auth-daemon/.devcontainer/: devcontainer.json
backend/auth-daemon/src/: config.rs  database.rs  error.rs  healthcheck.rs  inject_token.rs  main.rs  proxy.rs  state.rs
backend/auth-gateway/: CHANGELOG.md  Cargo.toml  README.md  config.yaml
backend/auth-gateway/.devcontainer/: docker-compose.yml
backend/auth-gateway/src/: auth_session_data.rs  callback.rs  config.rs  login.rs  main.rs  state.rs
backend/graph-proxy/: .dockerignore  CHANGELOG.md  Cargo.toml
backend/graph-proxy/.cargo/: config.toml
backend/graph-proxy/.devcontainer/: Dockerfile  devcontainer.json
backend/graph-proxy/src/: main.rs  metrics.rs  s3client.rs  test_oidc_server.rs  validate_token.rs
backend/graph-proxy/test-assets/: get-many-triggers.json  get-single-trigger.json  get-workflow-kc7pf-running.json  get-workflow-n6jsg.json  get-workflow-pwtgn-null.json  get-workflow-template-full-param-schema.json  get-workflow-template.json  get-workflow-templates-null.json  get-workflow-with-arrays.json  get-workflows-null.json  get-workflows.json  make-trigger.json  named-trigger.json  namespaced-trigger.json  submit-workflow.json  unauthorised-trigger.json
backend/identity-mapper/: CHANGELOG.md  Dockerfile  README.md  pyproject.toml
backend/identity-mapper/tests/: test_kubernetes.py  test_ldap.py  test_sync.py
backend/oidc-bff/: CHANGELOG.md  Cargo.toml  README.md  config.yaml
backend/oidc-bff/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
backend/oidc-bff/migration/: Cargo.toml
backend/oidc-bff/src/: admin_auth.rs  api.rs  auth_proxy.rs  auth_session_data.rs  callback.rs  config.rs  counter.rs  database.rs  device.rs  error.rs  inject_token.rs  inject_token_from_session.rs  lib.rs  login.rs  main.rs  schema.rs  session.rs  state.rs
backend/sessionspaces/: .dockerignore  CHANGELOG.md  Cargo.toml  README.md
backend/sessionspaces/.devcontainer/: Dockerfile  docker-compose.yml
backend/sessionspaces/.devcontainer.local/: Dockerfile  README.md  docker-compose.yml
backend/sessionspaces/src/: instruments.rs  main.rs  metrics.rs
backend/telemetry/: CHANGELOG.md  Cargo.toml
backend/telemetry/src/: lib.rs
graph-proxy/: Cargo.toml  Dockerfile  README.md  deny.toml
graph-proxy/.devcontainer/: Dockerfile  devcontainer.json
graph-proxy/argo-workflows-openapi/: .gitignore  Cargo.toml  build.rs
graph-proxy/argo-workflows-openapi/src/: lib.rs
graph-proxy/src/: graphql.rs  main.rs  telemetry.rs
graph-proxy/src/graphql/: mod.rs  parameter_schema.rs  ui_schema.rs  workflow_templates.rs  workflows.rs
graph-proxy/test-assets/: get-workflow-qhb59-failed.json
graph-proxy/test-resources/: get-single-workflow.json  get-workflow-jwcfp-errored.json  get-workflow-n6jsg.json  get-workflow-wdkwj.json  get-workflows-paginated.json  get-workflows.json
sessionspaces/: Cargo.toml  Dockerfile  README.md  deny.toml
sessionspaces/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
sessionspaces/src/: instruments.rs  main.rs
sessionspaces/src/permissionables/: basic_info.rs  direct_subjects.rs  ldap.rs  mod.rs  posix_attributes.rs  proposal_subjects.rs  session.rs  subject_session.rs  subjects.rs
sessionspaces/src/resources/: config_map.rs  config_maps.rs  member_sa.rs  mod.rs  namespace.rs  workflows_sa.rs
sessionspaces/tests/fixtures/: bl_sessions.sql  persons.sql  proposals.sql
sessionspaces/tests/migrations/: 0_createISPyBTables.sql
workflows-cli/: CHANGELOG.md  Cargo.toml  README.md
workflows-cli/.devcontainer/: Dockerfile  devcontainer.json
workflows-cli/container_utils/: install-argo.sh
workflows-cli/sample_chart/: numpy.yaml  test.yaml
workflows-cli/src/: command_runner.rs  helm_integration.rs  main.rs
workflows-cli/src/create/: mod.rs
workflows-cli/src/linter/: base_linting.rs  common.rs  config_linting.rs  helm.rs  linter_argocli.rs  linter_labels.rs  mod.old.rs  mod.rs
workflows-cli/src/submit_workflow/: mod.rs
workflows-cli/template-boilerplate/conventional-templates/: README.md  hello-world.yaml
workflows-cli/template-boilerplate/helm-based-templates/: Chart.yaml  README.md
workflows-cli/tests/: mock_commands.yaml
workflows-cli/tests/manifests/: workflow1.yaml  workflow2.yaml  workflow3.yaml
workflows-cli/tests/manifests_failing_labels/: workflow1.yaml  workflow2.yaml  workflow3.yaml  workflow4.yaml
(+892 files in other folders)
