[workspace]
members = [
    "argo-workflows-openapi",
    "graph-proxy",
    "sessionspaces",
    "telemetry",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
built = { version = "0.8.0" }
clap = { version = "4.5.48", features = ["derive", "env"] }
chrono = { version = "0.4.42" }
derive_more = { version = "2.0.1" , features = [
    "deref",
    "deref_mut",
    "from",
    "from_str",
    "into",
]}
dotenvy = { version = "0.15.7" }
mockito = { version = "1.7.0" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
    "blocking",
    "stream"
] }
serde = { version = "1.0.226", features = ["derive"] }
serde_json = { version = "1.0.145" }
thiserror = { version = "2.0.16" }
tracing = { version = "0.1.41" }
tokio = { version = "1.47.1", features = [
    "macros",
    "time",
    "net",
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3.20" }
url = { version = "2.5.4" }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0", features = ["runtime", "derive"] }
opentelemetry = { version = "0.30.0" }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
