[workspace]
members = [
    "argo-workflows-openapi",
    "auth-daemon",
    "graph-proxy",
    "sessionspaces",
    "telemetry",
]
resolver = "2"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
built = { version = "0.8.0" }
clap = { version = "4.5.56", features = ["derive", "env"] }
chrono = { version = "0.4.43" }
derive_more = { version = "2.0.1" , features = [
    "deref",
    "deref_mut",
    "from",
    "from_str",
    "into",
]}
dotenvy = { version = "0.15.7" }
mockito = { version = "1.7.1" }
reqwest = { version = "0.12.15", default-features = false, features = [
    "rustls-tls",
    "json",
    "blocking",
    "stream"
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
tracing = { version = "0.1.44" }
tokio = { version = "1.48.0", features = [
    "macros",
    "time",
    "net",
    "rt-multi-thread",
] }
tracing-subscriber = { version = "0.3.22" }
url = { version = "2.5.4" }
k8s-openapi = { version = "0.26.0", features = ["latest"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.31.0"
tracing-opentelemetry = { version = "0.32.1" }
axum = { version = "0.8.8" }
regex = "1.12.2"
tower-http = { version = "0.6.8", features = ["cors"] }
