[workspace]
members = [".", "argo-workflows-openapi"]
default-members = ["."]

[workspace.dependencies]
chrono = { version = "0.4.38" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }

[package]
name = "graph-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.93" }
argo-workflows-openapi = { path = "./argo-workflows-openapi" }
async-graphql = { version = "7.0.11", features = ["chrono"] }
async-graphql-axum = { version = "7.0.11" }
axum = { version = "0.7.9" }
axum-extra = { version = "0.9.6", features = ["typed-header"] }
chrono = { workspace = true }
clap = { version = "4.5.21", features = ["derive", "env"] }
derive_more = { version = "1.0.0", features = [
  "deref",
  "deref_mut",
  "from",
  "into",
] }
dotenvy = { version = "0.15.7" }
lazy_static = { version = "1.5.0" }
opentelemetry = { version = "0.22.0" }
opentelemetry-otlp = { version = "0.15.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.14.0"
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
regex = "1.11.1"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { version = "2.0.3" }
tokio = { version = "1.41.1", features = ["macros", "net", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = { version = "0.1.40" }
tracing-opentelemetry = { version = "0.23.0" }
tracing-subscriber = { version = "0.3.18" }
url = { version = "2.5.4" }

[build-dependencies]
built = { version = "0.7.5" }
