[package]
name = "sessionspaces"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.95" }
clap = { version = "4.5.26", features = ["derive", "env"] }
derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
dotenvy = { version = "0.15.7" }
humantime = { version = "2.1.0" }
if_chain = "1.0.2"
itertools = { version = "0.14.0" }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.98.0" }
ldap3 = { version = "0.11.5", default-features = false, features = [
    "tls-rustls",
] }
serde_json = { version = "1.0.137" }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "time",
] }
strum = { version = "0.26.3", features = ["derive"] }
time = { version = "0.3.37" }
tokio = { version = "1.43.0", features = ["macros", "time"] }
tower = { version = "0.5.2", features = ["limit", "util"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.19" }
url = { version = "2.5.4" }

[dev-dependencies]
wiremock = "0.6.2"
