[package]
name = "workflows"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.58", features = ["derive", "env"] }
colored = "3.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = { version = "0.9.34" }
yaml-rust2 = "0.10.4"

[dev-dependencies]
serial_test = "3.2.0"
