[package]
name = "argo-workflows-openapi"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
reqwest = { workspace = true }
rustfmt-wrapper = { version = "0.2.1" }
schemars = { version = "0.8.22" }
serde_json = { workspace = true }
syn = { version = "2.0.114" }
typify = { version = "0.5.0" }
