[package]
name = "auth-broker"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
auth-core = { path = "../auth-core" }
anyhow.workspace = true
axum = { workspace = true, features = ["json"] }
clap = { workspace = true, features = ["env"] }
dotenvy.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
chrono.workspace = true
kube = { workspace = true, features = ["client", "ws"] }
k8s-openapi = { workspace = true }
moka = { workspace = true, features = ["future"] }
dashmap = "6"

[dev-dependencies]
axum-test = {workspace = true}
mockito.workspace = true
env_logger = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-postgres", "sqlx-sqlite"] }
migration = { version = "0.1.0", path = "../auth-core/migration" }
testcontainers = { workspace = true }
testcontainers-modules = { version = "0.15.0", features = ["k3s"] }
http = "1.4.2"
serde_yaml = {workspace=true}
