[package]
name = "auth-common"
version = "0.1.0"
edition = "2024"
description = "Shared authentication logic for oidc-bff and auth-daemon"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
http-body-util = "0.1.3"
oauth2 = "5.0.0"
openidconnect = "4.0.1"
sea-orm = { workspace = true, features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sodiumoxide = "0.2.7"
base64 = "0.22.1"
tracing = { workspace = true }
