[package]
name = "auth-core"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[lib]
name = "auth_core"
path = "src/lib.rs"

[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros"] }
base64 = "0.22.1"
chrono = { workspace = true }
http-body-util = "0.1.3"
migration = { version = "0.1.0", path = "migration" }
oauth2 = "5.0.0"
openidconnect = { version = "4.0.1", features = ["timing-resistant-secret-traits"] }
rustls = { version = "0.23.35", features = ["ring"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9.34"
sodiumoxide = "0.2.7"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
