[package]
name = "auth-daemon"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["json"] }
axum-reverse-proxy = "1.0.3"
clap = { workspace = true, features = ["env"] }
dotenvy.workspace = true
openidconnect = "4.0.1"
regex = { workspace = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml = "0.9.34"
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
oidc-bff = { path = "../oidc-bff" }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "sqlx-postgres", "runtime-tokio-rustls", "macros"] }
chrono.workspace = true
sodiumoxide = "0.2.7"
http-body-util = "0.1.3"
oauth2 = "5.0.0"
base64 = "0.22.1"
rustls = "0.23.35"
axum-test = "18.4.1"
env_logger = "0.11.8"
oauth2-test-server = "0.1.3"
testcontainers = {version = "0.26.0", features = ["http_wait_plain"]}

[dev-dependencies]
mockito.workspace = true
serde_json.workspace = true
migration = { version = "0.1.0", path = "../oidc-bff/migration" }
