[package]
name = "auth-daemon"
version = "0.1.0"
edition = "2024"
license-file = "../../LICENSE"

[dependencies]
auth-core = { path = "../auth-core" }
anyhow.workspace = true
axum = { workspace = true, features = ["json"] }
axum-reverse-proxy = "1.0.3"
clap = { workspace = true, features = ["env"] }
dotenvy.workspace = true
regex = { workspace = true }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
url.workspace = true
chrono.workspace = true
axum-test = "18.4.1"
env_logger = "0.11.8"
oauth2-test-server = "0.1.3"
testcontainers = {version = "0.26.0", features = ["http_wait_plain"]}

[dev-dependencies]
mockito.workspace = true
serde_json.workspace = true
sea-orm = { workspace = true, features = ["sqlx-postgres", "sqlx-sqlite"] }
migration = { version = "0.1.0", path = "../auth-core/migration" }
