[package]
name = "graph-proxy"
version = "0.1.11"
edition = "2021"
exclude = ["test-assets/"]
license-file = "../../LICENSE"

[dependencies]
anyhow = { workspace = true }
aws-credential-types = { version = "1.2.2" }
aws-sdk-s3 = { version = "1.82.0" , features = ["behavior-version-latest"]}
argo-workflows-openapi = { path = "../argo-workflows-openapi" }
async-graphql = { version = "7.0.17", features = ["chrono", "url"] }
async-graphql-axum = { version = "7.0.17" }
axum = { workspace = true }
axum-extra = { version = "0.10.2", features = ["typed-header"] }
chrono = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
lazy_static = { version = "1.5.0" }
mime_guess = "2.0.5"
regex = { workspace = true}
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
telemetry = { path = "../telemetry" }
tokio = { workspace = true }
tower-http = { workspace = true, features = ["cors"] }
tracing = { workspace = true }
url = { workspace = true }
tower-service = "0.3.3"
futures-util = "0.3.31"
tokio-stream = { version = "0.1.17" }
k8s-openapi = { workspace = true }
kube = { workspace = true }
secrecy = "0.10.3"
rustls = "0.23.28"
async-stream = "0.3.6"
eventsource-stream = "0.2.3"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
