[package]
name = "oidc-bff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["macros"] }
axum-reverse-proxy = "1.0.3"
bytes = "1.11.0"
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
http-body-util = "0.1.3"
hyper = "1.8.1"
moka =  { version = "0.12.11", features = ["future"] }
oauth2 = "5.0.0"
openidconnect = { version = "4.0.1", features = ["timing-resistant-secret-traits"]}
rustls = { version = "0.23.35", features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-sessions = "0.14.0"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono" ] }
migration = { version = "0.1.0", path = "migration" }
