[package]
name = "oidc-bff"
version = "0.1.0"
edition = "2024"
default-run = "oidc-bff"

[lib]
name = "oidc_bff"          # the library name as used in code: `use oidc_bff::...`
path = "src/lib.rs"


[[bin]]
name = "keygen"
path = "src/bin/keygen.rs"
publish = false

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
axum = { workspace = true, features = ["macros"] }
axum-reverse-proxy = "1.0.3"
bytes = "1.11.0"
chrono.workspace = true
clap.workspace = true
dotenvy.workspace = true
http-body-util = "0.1.3"
hyper = "1.8.1"
moka =  { version = "0.12.11", features = ["future"] }
oauth2 = "5.0.0"
openidconnect = { version = "4.0.1", features = ["timing-resistant-secret-traits"]}
rustls = { version = "0.23.35", features = ["ring"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tower-sessions = "0.14.0"
sea-orm = {workspace=true}
migration = { version = "0.1.0", path = "migration" }
sodiumoxide = "0.2.7"
base64 = "0.22.1"
serde_yaml = "0.9.34"
