[package]
name = "sessionspaces"
version = "0.1.2"
edition = "2021"
license-file = "../../LICENSE"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
derive_more = { workspace = true }
dotenvy = { workspace = true }
humantime = { version = "2.2.0" }
if_chain = "1.0.2"
itertools = { version = "0.14.0" }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
kube = { version = "0.99.0" }
ldap3 = { version = "0.11.5", default-features = false, features = [
    "tls-rustls",
] }
serde_json = { workspace = true }
sqlx = { version = "0.8.3", features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "time",
] }
strum = { version = "0.27.1", features = ["derive"] }
telemetry = { path = "../telemetry" }
time = { version = "0.3.41" }
tokio = { workspace = true }
tower = { version = "0.5.2", features = ["limit", "util"] }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
wiremock = "0.6.3"
