[package]
name = "telemetry"
build = "build.rs"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A telemetry library for collecting and exporting metrics and traces."

[dependencies]
clap = { workspace = true }
opentelemetry = { version = "0.29.1" }
opentelemetry-otlp = { version = "0.29.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.29.0"
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.30.0" }
tracing-subscriber = { version = "0.3.19" }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockito = { version = "1.7.0" }

[build-dependencies]
built = { version = "0.7.5" }
