[package]
name = "telemetry"
build = "build.rs"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A telemetry library for collecting and exporting metrics and traces."

[dependencies]
clap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { version = "0.30.0", features = ["metrics", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.30.0"
opentelemetry_sdk = { workspace = true}
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { version = "0.31.0" }
tracing-subscriber = { version = "0.3.20" }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockito = { workspace = true }

[build-dependencies]
built = { version = "0.8.0" }
