[package]
name = "telemetry"
build = "build.rs"
version = "0.1.2"
edition = "2021"
license = "Apache-2.0"
description = "A telemetry library for collecting and exporting metrics and traces."

[dependencies]
clap = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true}
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
mockito = { workspace = true }

[build-dependencies]
built = { version = "0.8.0" }
