[package]
name = "argo-workflows-openapi"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
rustfmt-wrapper = { version = "0.2.1" }
schemars = { version = "0.8.21" }
serde_json = { version = "1.0.137" }
syn = { version = "2.0.96" }
typify = { version = "0.3.0" }
